# simple-antispam

./: LICENSE  README.md  setup.cfg  setup.py
fontcheck/: __init__.py
src/: __init__.py  antispam.py  fontchecker.py  test.py
