[metadata]
description-file = README.md
name = fontcheck-nsde
version = 0.2
author = nsde
author_email = neostyxde@gmail.com
description = A very simple program to check if a text contains special fonts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/nsde/fontcheck/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
